# sympy-egraph

./: .gitignore  LICENSE  README.md  sandbox.py  setup.cfg
benchmarks/: test_griewank_baby_example.py
dag/: __init__.py  dag.py  dagify.py  graph.py  singleton.py
egraph/: __init__.py  core.py  egraph.py  rewrite.py  symbol.py  union_find.py
tests/: test_symbol.py
tests/dag/: test_dagify.py  test_directed_acyclic_graph.py
tests/egraph/: test_dag.py  test_egraph.py  test_operation.py  test_rewrite.py  test_symbol.py
