[metadata]
name = sympy-egraph
author = Sam Brockie
author_email = sambrockie@icloud.com
description = Prototype implementation investigating use of e-graphs within SymPy
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = [LICENSE]

[options]
zip_safe = False
include_package_data = True
packages = dag
python_requires = >=3.10
install_requires =
    sympy >=1.11.1

[options.extras_require]
tests =
    hypothesis >=6.56
    pytest >=6.0

[tool:pytest]
testpaths =
    tests/dag
